8205438: Re-enable shebang tests in test/jdk/tools/launchers/SourceMode.java
Reviewed-by: mchung